# rust-wifi-kicker

./: Cargo.toml  README.md
src/: main.rs
